# virtual-chief-of-staff

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: INTEGRATIONS.md
scripts/: setup-windows.ps1
src/vcos/: __init__.py  cli.py  config.py
src/vcos/data/advisors/: marshall.md
src/vcos/data/help/: antigravity.md  claude-code.md  nanoclaw.md  overview.md
src/vcos/data/scaffold/prompts/: mom.md
src/vcos/data/scaffold/work-style/: style.md
src/vcos/skills/: archive.py  auth.py  compose.py  mom.py  retrieve.py  standup.py  status.py  transcribe.py  youtube.py
